// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t0] the clone is enrolled then: the clone-list json machine shape is locked (catches a drifted shape) 1`] = `
"{
  "actors": [
    {
      "hash": "ee65f291",
      "brain": "claude",
      "roles": [
        "driver",
        "architect",
        "mechanic"
      ],
      "clones": [
        {
          "serial": "__SERIAL__",
          "slug": "driver",
          "reachState": "LIVE",
          "spawnedAt": "__TIMESTAMP__"
        }
      ]
    }
  ]
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t0] the clone is enrolled then: the clone-list tree format is locked (visual spot-check) 1`] = `
"😶 clones
   └─ actor ee65f29… (brain=claude roles=architect,driver,mechanic)
      └─ @:driver  serial=__SERIAL8__  state=LIVE  since=__TIMESTAMP__
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t1] say poke <nonce> BY SLUG, then get then: the say tree (human) success format is locked (visual spot-check) 1`] = `
"😶🎙️ said to @:driver
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t3] a process runs \`clone whoami\` FROM WITHIN the clone then: the whoami tree (human) success format is locked (visual spot-check) 1`] = `
"😶 you are @:driver
   ├─ serial=__SERIAL8__
   ├─ state=LIVE
   └─ actor=@ee65f291
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t3b] the clone says to ITS OWN address (a self-say LANDS) then: the self-say success format is locked (visual spot-check) 1`] = `
"😶🎙️ said to @:driver
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t4] a process says to an UNKNOWN address then: the unknown-address error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: no clone answers to '@:ghostclone'

{
  "hint": "list clones with \`rhx clone list\`"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t5] \`clone whoami --output json\` (machine self-identity) then: the whoami json machine shape is locked (catches a drifted shape) 1`] = `
"{
  "serial": "__SERIAL__",
  "slug": "driver",
  "reachState": "LIVE",
  "actorHash": "ee65f291"
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t5b] \`clone whoami\` run OUTSIDE any enrolled clone then: the not-a-clone error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: not run inside an enrolled clone

{
  "hint": "whoami works from within a clone spawned by \`rhx enroll\`"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t5c] \`clone whoami --output json\` run OUTSIDE any enrolled clone then: the not-a-clone json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "not run inside an enrolled clone",
  "hint": "whoami works from within a clone spawned by \`rhx enroll\`",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "whoami works from within a clone spawned by \`rhx enroll\`"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t7] the talk verbs under --output json + --tail (machine reads) then: the get json machine shape is locked (catches a drifted shape) 1`] = `
"{
  "messages": [
    {
      "direction": "out",
      "text": "ack:__NONCE__",
      "at": null
    }
  ],
  "exidsUnreadable": [],
  "exidsAmbiguous": [],
  "exidsForeign": [],
  "total": "__TOTAL__",
  "truncated": true
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t7] the talk verbs under --output json + --tail (machine reads) then: the say json machine shape is locked (catches a drifted shape) 1`] = `
"{
  "delivered": true,
  "verdict": "released",
  "reason": null,
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "driver"
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t8] \`get --tail <bad>\` (the tail-bound guard) then: the bad-tail error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: invalid --tail "notanumber"

{
  "hint": "use a non-negative integer (e.g. --tail 20) or --tail all"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t8b] \`get --tail <bad> --output json\` (the machine twin) then: the bad-tail json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "invalid --tail \\"notanumber\\"",
  "hint": "use a non-negative integer (e.g. --tail 20) or --tail all",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "use a non-negative integer (e.g. --tail 20) or --tail all"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t8c] \`get --format <bad>\` (the render-mode guard) then: the bad-format error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: invalid --format "bogus"

{
  "hint": "use --format blocks (default, directioned) or --format raw (verbatim replies)"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t8d] \`get --format <bad> --output json\` (the machine twin) then: the bad-format json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "invalid --format \\"bogus\\"",
  "hint": "use --format blocks (default, directioned) or --format raw (verbatim replies)",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "use --format blocks (default, directioned) or --format raw (verbatim replies)"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t10] the talk verbs fail as machine JSON for an unknown address then: the get JSON-error shape is locked (visual spot-check) 1`] = `
"{
  "class": "ConstraintError",
  "message": "no clone answers to '@:ghostclone'",
  "hint": "list clones with \`rhx clone list\`",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "list clones with \`rhx clone list\`"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t10] the talk verbs fail as machine JSON for an unknown address then: the say JSON-error shape is locked (visual spot-check) 1`] = `
"{
  "class": "ConstraintError",
  "message": "no clone answers to '@:ghostclone'",
  "hint": "list clones with \`rhx clone list\`",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "list clones with \`rhx clone list\`"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t10b] a process GETs an UNKNOWN address (the human tree) then: the unknown-address get tree format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: no clone answers to '@:ghostclone'

{
  "hint": "list clones with \`rhx clone list\`"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t11] \`get\` human-tree read (the primary observe variant) then: the get tree (human) success format is locked (visual spot-check) 1`] = `
"😶🎧 talk of @:driver  ·  tail 1
   │
   └─ 🎧
      ├─
      │
      │  ack:__NONCE__
      │
      └─
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t12] \`get\` renders a directioned in/out conversation (better-get) then: the \`--format raw\` relay stream is locked (mask each nonce) 1`] = `
"ack:__NONCE__
ack:__NONCE__
"
`;

exports[`rhx clone reach (acceptance) given: [case1] a named clone enrolled through a real pty when: [t12] \`get\` renders a directioned in/out conversation (better-get) then: the directioned tree layout is locked (mask each nonce) 1`] = `
"😶🎧 talk of @:driver  ·  tail 4
   │
   ├─ 🎙️
   │  ├─
   │  │
   │  │  poke __NONCE__
   │  │
   │  └─
   │
   ├─ 🎧
   │  ├─
   │  │
   │  │  ack:__NONCE__
   │  │
   │  └─
   │
   ├─ 🎙️
   │  ├─
   │  │
   │  │  poke __NONCE__
   │  │
   │  └─
   │
   └─ 🎧
      ├─
      │
      │  ack:__NONCE__
      │
      └─
"
`;

exports[`rhx clone reach (acceptance) given: [case2] a clone whose brain has EXITED (dead) when: [t0] a process says to the dead clone then: the dead-clone error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: no live clone for this address — its socket is gone

{
  "hint": "re-enroll to spawn a fresh clone",
  "reachState": "DEAD",
  "reachCause": "DEAD-same-host"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case2] a clone whose brain has EXITED (dead) when: [t1] a process says to the dead clone with --output json then: the dead-clone json error shape is locked (catches a drifted shape) 1`] = `
"{
  "class": "ConstraintError",
  "message": "no live clone for this address — its socket is gone",
  "hint": "re-enroll to spawn a fresh clone",
  "reachState": "DEAD",
  "reachCause": "DEAD-same-host",
  "metadata": {
    "hint": "re-enroll to spawn a fresh clone",
    "reachState": "DEAD",
    "reachCause": "DEAD-same-host"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case2] a clone whose brain has EXITED (dead) when: [t2] a process GETs the dead clone (the human tree) then: the dead-clone get tree format is locked (visual spot-check) 1`] = `
"😶🎧 talk of @:ranger  ·  tail 20
   │
   └─ (no messages yet)
"
`;

exports[`rhx clone reach (acceptance) given: [case2] a clone whose brain has EXITED (dead) when: [t3] a process GETs the dead clone with --output json then: the dead-clone get json shape is locked (machine contract) 1`] = `
"{
  "messages": [],
  "exidsUnreadable": [],
  "exidsAmbiguous": [],
  "exidsForeign": [],
  "total": 0,
  "truncated": false
}
"
`;

exports[`rhx clone reach (acceptance) given: [case3] a SECOND enroll of a still-live --as slug (idempotent reuse) when: [t0] the same slug is enrolled again with --output json then: the reused json handoff shape is locked (catches a drifted shape) 1`] = `
"{"outcome":"reused","serial":"__SERIAL__","slug":"driver","socketEligible":true}
"
`;

exports[`rhx clone reach (acceptance) given: [case3] a SECOND enroll of a still-live --as slug (idempotent reuse) when: [t1] the same slug is enrolled again in DEFAULT tree mode then: the reused tree line is locked (visual spot-check) 1`] = `
"♻ reused the live clone that already answers to @:driver (no new brain spawned)
"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t0] \`clone list\` on a repo with no clones then: the empty clone-list format is locked (visual spot-check) 1`] = `
"😶 clones
   └─ (no actors enrolled yet)
      └─ enroll one with \`rhx enroll <brain>\`
"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t0] \`clone list\` on a repo with no clones then: the empty clone-list json machine shape is locked (catches a drifted shape) 1`] = `
"{
  "actors": []
}
"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t1] \`clone list @<unknown-actor>\` (an invalid actor scope) then: the unknown-actor error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: no enrolled actor matches '@deadbeef'

{
  "hint": "list actors with \`rhx actor list\`, or enroll one with \`rhx enroll <brain>\`",
  "hashPrefix": "deadbeef"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t1] \`clone list @<unknown-actor>\` (an invalid actor scope) then: the unknown-actor json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "no enrolled actor matches '@deadbeef'",
  "hint": "list actors with \`rhx actor list\`, or enroll one with \`rhx enroll <brain>\`",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hashPrefix": "deadbeef",
    "hint": "list actors with \`rhx actor list\`, or enroll one with \`rhx enroll <brain>\`"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t2] \`clone whoami\` with a STALE clone-serial env (names no on-disk clone) then: the stale-serial whoami error format is locked (visual spot-check) 1`] = `
"
💥 MalfunctionError: the clone env serial names no on-disk clone

{
  "serial": "__SERIAL__"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t2] \`clone whoami\` with a STALE clone-serial env (names no on-disk clone) then: the stale-serial whoami json error shape is locked (machine contract) 1`] = `
"{
  "class": "MalfunctionError",
  "message": "the clone env serial names no on-disk clone",
  "hint": null,
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "serial": "__SERIAL__"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t3] \`say --await <bad>\` (the await-target guard) then: the bad-await error format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: --await must be 'enqueue' or 'release', got 'bogus'

{
  "hint": "omit --await for the default (enqueue)"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case4] a linked repo with NO clones enrolled when: [t4] \`say --await <bad> --output json\` (the machine twin) then: the bad-await json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "--await must be 'enqueue' or 'release', got 'bogus'",
  "hint": "omit --await for the default (enqueue)",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "hint": "omit --await for the default (enqueue)"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case5] a repo with NO .agent/ directory (never linked) when: [t0] \`clone list\` in an unlinked repo (no .agent/) then: the unlinked-repo not-linked format is locked (visual spot-check) 1`] = `
"😶 clones
   └─ (repo not linked)
      └─ link roles first with \`rhx init --roles <role>\`
"
`;

exports[`rhx clone reach (acceptance) given: [case5] a repo with NO .agent/ directory (never linked) when: [t1] \`clone list --output json\` in an unlinked repo (no .agent/) then: the unlinked-repo clone-list json shape is locked (machine contract) 1`] = `
"{
  "actors": []
}
"
`;

exports[`rhx clone reach (acceptance) given: [case6] a linked repo with an actor enrolled but NO clones under it when: [t0] \`clone list @<hash>\` for an actor with no clones then: the actor-scoped empty format is locked (visual spot-check) 1`] = `
"😶 clones
   └─ actor 8967acd… (brain=claude roles=mechanic)
      └─ (no clones)
         └─ enroll one with \`rhx enroll <brain>\`
"
`;

exports[`rhx clone reach (acceptance) given: [case6] a linked repo with an actor enrolled but NO clones under it when: [t0] \`clone list @<hash>\` for an actor with no clones then: the actor-scoped empty json machine shape is locked 1`] = `
"{
  "actors": [
    {
      "hash": "8967acd9",
      "brain": "claude",
      "roles": [
        "mechanic"
      ],
      "clones": []
    }
  ]
}
"
`;

exports[`rhx clone reach (acceptance) given: [case7] UNSCOPED \`clone list\` with a MIX — one actor owns a clone, one is clone-less when: [t0] a bare \`clone list\` is run then: json hides the clone-less actor too (tree ≡ json) 1`] = `
"{
  "actors": [
    {
      "hash": "8967acd9",
      "brain": "claude",
      "roles": [
        "mechanic"
      ],
      "clones": [
        {
          "serial": "__SERIAL__",
          "slug": null,
          "reachState": "DEAF",
          "spawnedAt": "__TIMESTAMP__"
        }
      ]
    }
  ]
}
"
`;

exports[`rhx clone reach (acceptance) given: [case7] UNSCOPED \`clone list\` with a MIX — one actor owns a clone, one is clone-less when: [t0] a bare \`clone list\` is run then: the unscoped-mixed tree format is locked (visual regression) 1`] = `
"😶 clones
   └─ actor 8967acd… (brain=claude roles=mechanic)
      └─ @:__SERIAL8__  state=DEAF  since=__TIMESTAMP__
"
`;

exports[`rhx clone reach (acceptance) given: [case8] UNSCOPED \`clone list\` where EVERY enrolled actor is clone-less when: [t0] a bare \`clone list\` is run then: json hides all clone-less actors too (tree ≡ json) 1`] = `
"{
  "actors": []
}
"
`;

exports[`rhx clone reach (acceptance) given: [case8] UNSCOPED \`clone list\` where EVERY enrolled actor is clone-less when: [t0] a bare \`clone list\` is run then: the all-clone-less empty-state format is locked (visual spot-check) 1`] = `
"😶 clones
   └─ (no clones)
      └─ enroll one with \`rhx enroll <brain>\`, or see identities with \`rhx actor list\`
"
`;

exports[`rhx clone reach (acceptance) given: [case9] a clone whose input box is DIRTY (a human mid-type) when: [t0] an UNFORCED say into the dirty box then: the withheld/dirty JSON envelope is locked too — the MACHINE twin 1`] = `
"{
  "class": "ConstraintError",
  "message": "the clone input box holds uncommitted text (a human mid-type) — the say was withheld",
  "hint": "read the box with \`clone get --what buffer\`, twice a second apart: rows that GREW are a human mid-type; rows that held still are either a human who paused or stale output the brain has yet to redraw. then wait for it to clear, or re-send with --force (which clobbers whatever sits there)",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "delivered": false,
    "verdict": "withheld",
    "reason": "input-region-dirty",
    "probe": "capable",
    "serial": "__SERIAL__",
    "slug": "dirtybox",
    "hint": "read the box with \`clone get --what buffer\`, twice a second apart: rows that GREW are a human mid-type; rows that held still are either a human who paused or stale output the brain has yet to redraw. then wait for it to clear, or re-send with --force (which clobbers whatever sits there)",
    "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case9] a clone whose input box is DIRTY (a human mid-type) when: [t0] an UNFORCED say into the dirty box then: the withheld/dirty stderr format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: the clone input box holds uncommitted text (a human mid-type) — the say was withheld

{
  "hint": "read the box with \`clone get --what buffer\`, twice a second apart: rows that GREW are a human mid-type; rows that held still are either a human who paused or stale output the brain has yet to redraw. then wait for it to clear, or re-send with --force (which clobbers whatever sits there)",
  "delivered": false,
  "verdict": "withheld",
  "reason": "input-region-dirty",
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "dirtybox",
  "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case9] a clone whose input box is DIRTY (a human mid-type) when: [t1] a --force say into the SAME dirty box then: the forced-release JSON envelope is locked — the SUCCESS machine twin 1`] = `
"{
  "delivered": true,
  "verdict": "released",
  "reason": null,
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "dirtybox"
}
"
`;

exports[`rhx clone reach (acceptance) given: [case9] a clone whose input box is DIRTY (a human mid-type) when: [t2] a \`clone get --what buffer\` read of that SAME dirty box then: the buffer read format is locked (visual spot-check) 1`] = `
"😶 @:dirtybox — the input box holds 1 row(s)
   │
   │  0 │ HUMAN-DRAFT-half-typed-and-uncommitted
   │
   └─ read it twice a second apart: rows that GREW are a human mid-type; rows that
      held still are either a human who paused or stale output awaiting a redraw
"
`;

exports[`rhx clone reach (acceptance) given: [case10] a clone with a MODAL open (a permission prompt) when: [t0] a say while a modal holds focus then: the withheld/modal JSON envelope is locked too — the MACHINE twin 1`] = `
"{
  "class": "ConstraintError",
  "message": "the clone has a modal open (a prompt or menu) — a say would answer it, so it was withheld",
  "hint": "a modal is never force-able. read what it asks with --debug; an attended clone clears it at its own tty, a detached clone has none, so no say lands until it is torn down",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "delivered": false,
    "verdict": "withheld",
    "reason": "modal-holds-focus",
    "probe": "capable",
    "serial": "__SERIAL__",
    "slug": "modalbox",
    "hint": "a modal is never force-able. read what it asks with --debug; an attended clone clears it at its own tty, a detached clone has none, so no say lands until it is torn down",
    "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case10] a clone with a MODAL open (a permission prompt) when: [t0] a say while a modal holds focus then: the withheld/modal stderr format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: the clone has a modal open (a prompt or menu) — a say would answer it, so it was withheld

{
  "hint": "a modal is never force-able. read what it asks with --debug; an attended clone clears it at its own tty, a detached clone has none, so no say lands until it is torn down",
  "delivered": false,
  "verdict": "withheld",
  "reason": "modal-holds-focus",
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "modalbox",
  "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case10] a clone with a MODAL open (a permission prompt) when: [t2] a \`clone get --what buffer\` read while the modal holds focus then: the modal-blind read format is locked (visual spot-check) 1`] = `
"😶 @:modalbox — the buffer could not be read
   ├─ cause: the screen is on modal, so the input band is not locatable
   └─ fix: read what the modal asks with --debug; it must be cleared at the clone's own tty
"
`;

exports[`rhx clone reach (acceptance) given: [case11] a clone mid-turn (busy) that holds the message when: [t0] a say to the busy clone (default --await enqueue) then: the enqueued json envelope is locked — the machine twin a retry policy reads 1`] = `
"{
  "delivered": true,
  "verdict": "enqueued",
  "reason": null,
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "busybrain"
}
"
`;

exports[`rhx clone reach (acceptance) given: [case11] a clone mid-turn (busy) that holds the message when: [t0] a say to the busy clone (default --await enqueue) then: the enqueued stdout format is locked (visual spot-check) 1`] = `
"😶🎙️ enqueued for @:busybrain — mid-turn; lands next
   └─ 🟡 held behind the active turn, not yet taken — if that turn is aborted (ctrl-C, crash, prune) the hold dies with it, unsent
"
`;

exports[`rhx clone reach (acceptance) given: [case12] a clone whose write reached the box but did not submit when: [t0] a say whose bytes reach the box but never submit then: the buffered/holds-text stderr envelope is locked (visual spot-check) 1`] = `
"{
  "class": "MalfunctionError",
  "message": "the message sits in the clone input box but the submit did not take",
  "hint": "do NOT re-send (it would append) — verify the clone accepts a submit, or retry with --await release",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "delivered": true,
    "verdict": "buffered",
    "reason": "input-region-holds-text",
    "probe": "capable",
    "serial": "__SERIAL__",
    "slug": "bufferbox",
    "hint": "do NOT re-send (it would append) — verify the clone accepts a submit, or retry with --await release",
    "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case12] a clone whose write reached the box but did not submit when: [t1] the same un-submitted say, on the HUMAN tree channel then: the buffered human frame is locked (visual spot-check) 1`] = `
"
💥 MalfunctionError: the message sits in the clone input box but the submit did not take

{
  "hint": "do NOT re-send (it would append) — verify the clone accepts a submit, or retry with --await release",
  "delivered": true,
  "verdict": "buffered",
  "reason": "input-region-holds-text",
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "bufferbox-tree",
  "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
}

"
`;

exports[`rhx clone reach (acceptance) given: [case13b] a SUCCESS verdict with --debug — the other half of the stream when: [t0] a say that SUCCEEDS, with --debug then: the capture NOTICE is a caller-faced contract, so it is snapped 1`] = `"🔍 clone say capture appended → /TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"`;

exports[`rhx clone reach (acceptance) given: [case14] a clone whose screen has NO input band (unrecognized) when: [t0] a say against a screen with no readable input band then: the withheld/unrecognized JSON envelope is locked too — the MACHINE twin 1`] = `
"{
  "class": "ConstraintError",
  "message": "the clone screen is unrecognized — the say was withheld rather than pasted blind",
  "hint": "an unrecognized screen is never force-able. read it with --debug; the measured causes are permanent (a 0x0 pty geometry, or a detached host with no tty), so a wait never clears them — tear the clone down and re-enroll it",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "delivered": false,
    "verdict": "withheld",
    "reason": "focus-unrecognized",
    "probe": "capable",
    "serial": "__SERIAL__",
    "slug": "noboxscreen",
    "hint": "an unrecognized screen is never force-able. read it with --debug; the measured causes are permanent (a 0x0 pty geometry, or a detached host with no tty), so a wait never clears them — tear the clone down and re-enroll it",
    "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
  }
}
"
`;

exports[`rhx clone reach (acceptance) given: [case14] a clone whose screen has NO input band (unrecognized) when: [t0] a say against a screen with no readable input band then: the withheld/unrecognized stderr format is locked (visual spot-check) 1`] = `
"
✋ ConstraintError: the clone screen is unrecognized — the say was withheld rather than pasted blind

{
  "hint": "an unrecognized screen is never force-able. read it with --debug; the measured causes are permanent (a 0x0 pty geometry, or a detached host with no tty), so a wait never clears them — tear the clone down and re-enroll it",
  "delivered": false,
  "verdict": "withheld",
  "reason": "focus-unrecognized",
  "probe": "capable",
  "serial": "__SERIAL__",
  "slug": "noboxscreen",
  "debugLog": "/TMP_TEST_DIR/.agent/.cache/repo=rhachet/skill=clone-say/debug.__DATE__.log"
}

"
`;
